[package]
name = "unit-prefix"
description = "Format numbers with metric and binary unit prefixes"
license = "MIT"

version = "0.5.0"
edition = "2018"
rust-version = "1.31.0"

authors = [
    "Fabio Valentini <decathorpe@gmail.com>",
    "Benjamin Sago <ogham@bsago.me>",
]
readme = "README.md"
exclude = [
    "/Cargo.lock",
    "/rustfmt.toml",
]
categories = ["algorithms", "no-std"]
keywords = ["mathematics", "numerics"]
repository = "https://github.com/commons-rs/unit-prefix"

[[example]]
name = "conversions"
required-features = ["std"]

[features]
default = ["std"]
std = []
